--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -9,7 +9,6 @@ $background: #fefefe;
 @mixin navGrid {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
 }
 
 @mixin alignLeft {
@@ -47,23 +46,22 @@ $background: #fefefe;
 
 .menu ul {
   @include navGrid();
-  background: $primaryColor;
-}
-
-.menu ul li {
-  padding: 25px 20px;
-  text-align: center;
-  white-space: nowrap;
+  max-width: 100%;
 }
 
 .menu ul li a {
+  display: block;
+  text-align: center;
+  padding: 2rem;
+  white-space: nowrap;
+  text-decoration: none;
+  font-size: 1rem;
+  background: $primaryColor;
   color: #fff;
-  padding: 1rem;
 }
 
-ul li {
+li {
   list-style-type: none;
-  margin: 0 10px;
 }
 
 li a {
