--- a/styles/theme.css
+++ b/styles/theme.css
@@ -8,13 +8,29 @@
 }
 
 .gutter {
-  width: 70%;
+  width: 60%;
   margin: auto;
-  max-width: 70%;
+  max-width: 60%;
+}
+
+.inner-gutter {
+  width: 90%;
+  margin: auto;
+  max-width: 90%;
 }
 
 .upper-nav {
   height: 10vh;
+}
+
+.login-header {
+  margin-bottom: 60px;
+}
+
+.menu-header {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 }
 
 .login-items ul {
@@ -28,7 +44,31 @@
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: start;
-  padding: 20px 5px;
+}
+
+.login-items ul li {
+  display: block;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  text-align: center;
+  line-height: 30px;
+  background: #566b78;
+}
+
+.login-items ul li :hover {
+  background: #45545e;
+}
+
+.login-items ul li a {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  white-space: nowrap;
+  text-decoration: none;
+  font-size: 1rem;
+  height: 100%;
+  color: #fff;
 }
 
 .menu ul {
@@ -39,17 +79,30 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  max-width: 100%;
+}
+
+.menu ul li {
+  display: block;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  text-align: center;
+  line-height: 50px;
+  background: #f58220;
+}
+
+.menu ul li :hover {
+  background: #df7416;
 }
 
 .menu ul li a {
-  display: block;
-  text-align: center;
-  padding: 2rem;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
   white-space: nowrap;
   text-decoration: none;
   font-size: 1rem;
-  background: #f58220;
+  height: 100%;
   color: #fff;
 }
 
