--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -28,9 +28,15 @@ $background: #fefefe;
 }
 
 .gutter {
-  width: 70%;
+  width: 60%;
   margin: auto;
-  max-width: 70%;
+  max-width: 60%;
+}
+
+.inner-gutter {
+  width: 90%;
+  margin: auto;
+  max-width: 90%;
 }
 
 // Header
@@ -39,24 +45,64 @@ $background: #fefefe;
   height: 10vh;
 }
 
+.login-header {
+  margin-bottom: 60px;
+}
+
+.menu-header {
+  position: sticky;
+  top: 0;
+}
+
 .login-items ul {
   @include alignLeft();
-  padding: 20px 5px;
+}
+
+.login-items ul li {
+  display: block;
+  flex-grow: 1;
+  text-align: center;
+  line-height: 30px;
+  background: #566b78;
+  :hover {
+    background: rgb(69, 84, 94);
+  }
+}
+
+.login-items ul li a {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  white-space: nowrap;
+  text-decoration: none;
+  font-size: 1rem;
+  height: 100%;
+  color: #fff;
 }
 
 .menu ul {
   @include navGrid();
-  max-width: 100%;
+}
+
+.menu ul li {
+  display: block;
+  flex-grow: 1;
+  text-align: center;
+  line-height: 50px;
+  background: $primaryColor;
+  :hover {
+    background: #df7416;
+  }
 }
 
 .menu ul li a {
-  display: block;
-  text-align: center;
-  padding: 2rem;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
   white-space: nowrap;
   text-decoration: none;
   font-size: 1rem;
-  background: $primaryColor;
+  height: 100%;
   color: #fff;
 }
 
