--- a/styles/theme.css
+++ b/styles/theme.css
@@ -7,6 +7,10 @@
   padding: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .gutter {
   width: 60%;
   margin: auto;
@@ -58,6 +62,10 @@
 
 .login-items ul li :hover {
   background: #45545e;
+}
+
+.home-border {
+  border-right: solid #fff 1px;
 }
 
 .login-items ul li a {
@@ -155,7 +163,7 @@ li a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  max-width: 800px;
+  max-width: 500px;
   width: 100%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -229,6 +237,22 @@ li a {
   border-left: none;
 }
 
+.phone {
+  margin-right: 5px;
+}
+
+.phone :hover {
+  color: #f58220;
+}
+
+.phone a {
+  white-space: nowrap;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 0.8rem;
+  color: #45545e;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -236,6 +260,33 @@ body {
 }
 
 .product-content {
+  background: #fefefe;
+  margin-top: 25px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (2fr)[4];
+      grid-template-columns: repeat(4, 2fr);
+  grid-gap: 20px;
+  border: solid rgba(0, 0, 0, 0.2) 0.5px;
+}
+
+.product {
+  padding: 10px;
+}
+
+.product button {
+  border: none;
+  margin: 0;
+  padding: 12px;
+  color: white;
+  background-color: #2f91b6;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+.more-product-content {
   height: 100vh;
 }
 
@@ -243,5 +294,9 @@ img {
   width: 100%;
   height: auto;
   max-width: 100%;
+}
+
+.fa-home {
+  font-size: 1rem !important;
 }
 /*# sourceMappingURL=theme.css.map */
