--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -5,6 +5,7 @@ $accent: #f5f6fd;
 $primaryColor: #f58220;
 $navTab: #566b78;
 $background: #fefefe;
+$btn: #2f91b6;
 
 // Flex Nav
 
@@ -27,6 +28,10 @@ $background: #fefefe;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 .gutter {
@@ -67,8 +72,12 @@ $background: #fefefe;
   line-height: 30px;
   background: #566b78;
   :hover {
-    background: rgb(69, 84, 94);
+    background: #45545e;
   }
+}
+
+.home-border {
+  border-right: solid #fff 1px;
 }
 
 .login-items ul li a {
@@ -144,7 +153,7 @@ li a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 800px;
+  max-width: 500px;
   width: 100%;
   box-sizing: border-box;
 }
@@ -197,6 +206,23 @@ li a {
   }
 }
 
+// Phone Number
+
+.phone {
+  margin-right: 5px;
+  :hover {
+    color: $primaryColor;
+  }
+}
+
+.phone a {
+  white-space: nowrap;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 0.8rem;
+  color: #45545e;
+}
+
 // Main Content
 
 body {
@@ -208,6 +234,33 @@ body {
 // Product Grid
 
 .product-content {
+  background: $background;
+  margin-top: 25px;
+  display: grid;
+  grid-template-columns: repeat(4, 2fr);
+  grid-gap: 20px;
+  border: solid rgba($color: #000000, $alpha: 0.2) 0.5px;
+}
+
+.product {
+  padding: 10px;
+}
+
+.product button {
+  border: none;
+  margin: 0;
+  padding: 12px;
+  color: white;
+  background-color: $btn;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+// More Product Content
+
+.more-product-content {
   height: 100vh;
 }
 
@@ -217,4 +270,8 @@ img {
   width: 100%;
   height: auto;
   max-width: 100%;
+}
+
+.fa-home {
+  font-size: 1rem !important;
 }
