--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -133,7 +133,8 @@ li a {
 .logo-header {
   display: flex;
   align-items: center;
-  height: 8vh;
+  height: 9vh;
+  margin: 5px 0;
 }
 
 .main-logo {
@@ -259,6 +260,7 @@ body {
     > img,
     > button {
       opacity: 0.9;
+      cursor: pointer;
     }
   }
 }
@@ -277,7 +279,7 @@ body {
 // More Product Content
 
 .more-product-content {
-  height: 100vh;
+  width: 100%;
 }
 
 // Footer
