--- a/styles/theme.css
+++ b/styles/theme.css
@@ -51,7 +51,7 @@ html {
           justify-content: start;
 }
 
-.login-items ul li {
+.login-items ul li:not(:first-child) {
   display: block;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
@@ -61,15 +61,32 @@ html {
   background: #566b78;
 }
 
-.login-items ul li :hover {
+.login-items ul li:not(:first-child):hover {
   background: #45545e;
+}
+
+.welcome {
+  border-right: solid #fff 1px;
+  display: block;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  text-align: center;
+  line-height: 30px;
+  background: #566b78;
+}
+
+.welcome p {
+  cursor: default;
+  font-weight: bold;
 }
 
 .home-border {
   border-right: solid #fff 1px;
 }
 
-.login-items ul li a {
+.login-items ul li a,
+p {
   display: inline-block;
   width: 100%;
   height: 100%;
@@ -283,6 +300,12 @@ body {
 
 .product img {
   display: block;
+}
+
+.product img,
+button {
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
 }
 
 .product:hover > img,
