--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -65,22 +65,37 @@ html {
   @include alignLeft();
 }
 
-.login-items ul li {
+.login-items ul li:not(:first-child) {
   display: block;
   flex-grow: 1;
   text-align: center;
   line-height: 30px;
   background: #566b78;
-  :hover {
+  &:hover {
     background: #45545e;
   }
+}
+
+.welcome {
+  border-right: solid #fff 1px;
+  display: block;
+  flex-grow: 1;
+  text-align: center;
+  line-height: 30px;
+  background: #566b78;
+}
+
+.welcome p {
+  cursor: default;
+  font-weight: bold;
 }
 
 .home-border {
   border-right: solid #fff 1px;
 }
 
-.login-items ul li a {
+.login-items ul li a,
+p {
   display: inline-block;
   width: 100%;
   height: 100%;
@@ -251,6 +266,11 @@ body {
 
 .product img {
   display: block;
+}
+
+.product img,
+button {
+  transition: 0.6s;
 }
 
 .product {
